# qa.guru_lesson_18

./: README.md  config.py  pyproject.toml  pytest.ini
demowebshop_test/data/: products.py
demowebshop_test/moduls/: api_methods.py  cart.py
demowebshop_test/utils/: api_methods.py  logging_attaching_methods.py  ui_methods.py
tests/: conftest.py  test_cart.py  test_demowebshop.py  test_login.py  test_ui.py
